# rd450x-console

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  TODO.md  go.mod  go.sum  jviewer.jnlp  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/rd450x-console/: main.go
docs/: kvm-bridge.md  kvm-protocol.md  kvm-vmedia.md  sol-setup.md
internal/config/: config.go
internal/kvm/: client.go  command.go  hid.go  hid_test.go  ivtp.go  latesink.go  session.go  transport.go  usbhid.go  vmediactl.go
internal/kvm/codec/: bitreader.go  codec_test.go  decode.go  decoder.go  header.go  huffman.go  idct.go  quant.go  rc4.go  tables.go  vq.go  yuv.go
internal/kvm/vmedia/: auth.go  (+10 more)
internal/power/: power.go
internal/rfb/: desktopsize_test.go  framesource.go  framesource_test.go  rfb.go  server.go  testpattern.go
internal/sol/: console.go  keyencode.go  keyencode_test.go  sol.go  sol_test.go  terminal.go  terminal_pipe.go  terminal_pipe_other.go  terminal_pipe_windows.go  terminal_tcell.go  terminal_unix.go  terminal_windows.go  terminal_windows_test.go
internal/webui/: browserbacking.go  control.go  webui.go
scripts/: bench_sol.py  probe_ipmi.py  probe_sol.py  probe_sol_rt.py  pty_drive.py  sol_capture.py
scripts/bench_sol_go/: main.go
scripts/bmc_reset_go/: main.go
scripts/host/: README.md  vmedia_read_bench.sh  vmedia_write_bench.sh
scripts/mkbench_go/: main.go
scripts/mkimg_go/: main.go
scripts/mkiso_go/: main.go
scripts/vmedia_probe_go/: main.go
src/rd450x_console/: __init__.py  cli.py  config.py  sol.py  terminal.py
(+10 files in other folders)
